name change to Fx.Tabs

--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
-name: MorphTabs
+name: Fx.Tabs
 author: vincentbluff
 category: InterFace
 tags: [tabs]
-current: 1.4
-docs: http://www.shaunfreeman.co.uk/content/article/page-MorphTabs
-demo: http://www.shaunfreeman.co.uk/content/article/page-MorphTabs#demo
+current: 1.5
+#docs: http://www.shaunfreeman.co.uk/content/article/page-MorphTabs
+#demo: http://www.shaunfreeman.co.uk/content/article/page-MorphTabs#demo
