--- a/package.yml
+++ b/package.yml
@@ -2,6 +2,6 @@ name: Fx.Tabs
 author: vincentbluff
 category: InterFace
 tags: [tabs]
-current: 1.5
-#docs: http://www.shaunfreeman.co.uk/content/article/page-MorphTabs
-#demo: http://www.shaunfreeman.co.uk/content/article/page-MorphTabs#demo
+current: 2.0
+docs: http://github.com/vincentbluff/Fx.Tabs/blob/master/Fx.Tabs.md
+demo: http://vincentbluff.github.com/Fx.Tabs
