--- a/package.yml
+++ b/package.yml
@@ -3,5 +3,5 @@ author: vincentbluff
 category: InterFace
 tags: [tabs]
 current: 2.0
-docs: http://github.com/vincentbluff/Fx.Tabs/blob/master/Fx.Tabs.md
+docs: http://github.com/vincentbluff/Fx.Tabs/blob/master/Docs/Fx.Tabs.md
 demo: http://vincentbluff.github.com/Fx.Tabs
